--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.org.springframework=debug
 treat dates as dates, do not treat it like timestamps
 server.port= 8090
+spring.messages.basename=messages
