Static filtering for Rest Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ logging.level.org.springframework=debug
 treat dates as dates, do not treat it like timestamps
 server.port= 8090
 spring.messages.basename=messages
+management.endpoints.web.exposure.include=*
