Authentification with Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-logging.level.org.springframework=debug
-treat dates as dates, do not treat it like timestamps
+#logging.level.org.springframework=debug
+#treat dates as dates, do not treat it like timestamps
 server.port= 8090
 spring.messages.basename=messages
 management.endpoints.web.exposure.include=*
+
+spring.security.user.name=username
+spring.security.user.password=password 
