--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ management.endpoints.web.exposure.include=*
 
 spring.security.user.name=username
 spring.security.user.password=password 
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;
+#spring.data.jpa.repositories.bootstrap-mode=default
+
+# this would start logging the sql in log, whenever a statement is executed
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
